@@ -26,6 +26,10 @@ Zope Changes
 
     Bugs Fixed
 
+      - AccessControl.ZopeSecurityPolicy:  harmonize 'checkPermission' 
+        with 'validate', checking ownership and proxy roles if an
+        executable object is on the stack.
+
       - AccessControl.SecurityInfo: Fixed problem with
         setPermissionDefault when the permission wasn't used anywhere
         else in the class to protect methods.
